<resources>
    <string name="app_name">Object Finder - IFsul</string>

    <string name="email_hint">test@gmail.com</string>
    <string name="password_hint">********</string>

    <string name="btn_login_text">Entrar</string>
    <string name="btn_logout_text">Sair</string>

    <string name="lost_object_name_hint">ex:. Caneta</string>
    <string name="lost_object_description_hint">ex:. Caneta preta da BIC</string>
    <string name="lost_object_locale_hint">ex:. Lab 2</string>
    <string name="lost_object_founded_date_hint">01/05/2023</string>


    <string name="lost_object_name_label">Nome</string>
    <string name="lost_object_description_label">Descrição</string>
    <string name="lost_object_locale_label">Local</string>
    <string name="lost_object_category_label">Categoria</string>

    <string name="lost_object_founded_date_label">Data</string>

    <string name="btn_next_step_text">Continuar</string>
    <string name="btn_create_lost_object_text">Cadastrar</string>


    <string name="view_holder_lost_object_name_default_text">Nome</string>
    <string name="view_holder_lost_object_description_default_text">Description</string>
    <string name="view_holder_lost_object_founded_date_default_text">05/07/2022</string>
</resources>