<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingVertical="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/lostObjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_holder_lost_object_name_default_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lostObjectDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_holder_lost_object_description_default_text" />
    </LinearLayout>
    <TextView
        android:id="@+id/lostObjectDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:layout_marginStart="120dp"
        android:padding="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/view_holder_lost_object_founded_date_default_text"
        android:textColor="@color/white" />


</LinearLayout>